# sentimental

./: .gitignore  LICENSE  README.md  mlartifacts.dvc  mlflow.db.dvc  pyproject.toml
.dvc/: config
notebooks/: sent-baseline.ipynb  sent-inspect.ipynb
requirements/: base.txt  cpu.txt  gpu.txt
src/sentimental/: evaluate.py  ingest.py  pipeline.py  predict.py  train.py  utils.py
src/sentimental/artifacts/pipeline_v1/: pipeline_v1.joblib  pipeline_v1.md
src/sentimental/config/: config.py
src/sentimental/data/: prepared.dvc  raw.dvc
src/sentimental/mlflow/: add_pipeline.py  baseline.py  pipeline.py
tests/: test_pipeline.py  test_predict.py
