[project]
name = "sentimental"
version = "0.1.0"
description = "A multi-class text classification model trained on Sentiment Analysis for Mental Health dataset from Kaggle"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "babaksoft", email = "babak.eslamieh@gmail.com" },
]
keywords = ["machine learning", "classification"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]

dependencies = [
    "numpy==2.4.0",
    "pandas==2.3.3",
    "scipy==1.16.3",
    "scikit-learn==1.8.0",
    "joblib==1.5.3",
    "mlflow==3.8.1",
    "mlflow-skinny==3.8.1",
    "tqdm==4.67.1",
    "pathspec==0.11.2",
    "dvc==3.65.0",
    "dvc-s3==3.3.0",
    "black==23.12.1",
    "ruff==0.15.7",
    "mypy==1.19.1",
    "pytest==9.0.2",
    "build==1.3.0",
    "hatchling==1.28.0"
]

[project.optional-dependencies]

cpu = [
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "jupyterlab==4.5.6",
    "notebook==7.5.5",
    "pytest==9.0.2",
    "fastapi[standard]==0.128.0",
    "uvicorn==0.40.0",
    "pydantic==2.12.5",
    "streamlit==1.52.2",
    "requests==2.32.5"
]

gpu = [
    "tensorflow[and-cuda]==2.20.0",
    "transformers==4.57.3",
    "datasets==4.4.2"
]

dev = [
    "pytest",
    "ruff"
]

[project.urls]
Homepage = "https://github.com/babaksoft/sentimental"
Issues = "https://github.com/babaksoft/sentimental/issues"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.dvc",
    "**/*.dvc",
    "**/.gitignore",
    "/notebooks",
    "/tests",
    ".gitignore",
    ".dvcignore",
    "requirements.txt"
]
